testsuite/tests/indexed-types/should_fail/T13971b.stderr

T13971b.hs:9:3: error:
    • Illegal duplicate variable ‘k’ in:
        ‘type T @k @k a b = k’
        The arguments to ‘T’ must all be distinct type variables
    • In the default type instance declaration for ‘T’
      In the class declaration for ‘C’
